Fix horizontal scroll issue and update links behavior

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -16,7 +16,7 @@
     transition: transform 0.3s ease;
 
     &:hover {
-      transform: scale(1.03) translateX(15px);
+      transform: scale(1.03) translateX(5px);
     }
   }
 }
