--- a/src/styles/blocks/phone.scss
+++ b/src/styles/blocks/phone.scss
@@ -17,7 +17,7 @@
     transition: transform 0.3s ease-in-out;
 
     &:hover {
-      transform: scale(1.03) translateX(15px);
+      transform: scale(1.03) translateX(5px);
     }
   }
 }
