--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -23,7 +23,7 @@
   gap: 0 16px;
 
   @include for-m {
-    grid-template-columns: repeat(8, minmax(60px, 1fr));
+    grid-template-columns: repeat(8, minmax(55px, 1fr));
     gap: 0 24px;
   }
 
